...
                target: self, action: #selector(onCancelTapped)
            )
        }
        self.form.append {
            Section(header: L10n.Login.pleaseInputMastodonInstance) {
                TextRow("instance") { row in
                    row.placeholder = "mastodon.example"
                    row.cellUpdate { cell, row in
                        cell.textField.autocorrectionType = .no
                        cell.textField.autocapitalizationType = .none
                        cell.textField.keyboardType = UIKeyboardType.URL
                    }
                }
            }
            Section {
                ButtonRow { row in
                    row.title = L10n.Login.loginButton
                    row.disabled = "$instance == nil"
                    row.cellSetup { cell, _ in
                        cell.accessibilityIdentifier = "loginButton"
                    }
                    row.onCellSelection { [weak self] cell, row in
                        self?.onLoginTapped()
                    }
                }
            }
...
