...
            vc.tabBarItem.title = descriptor.localizedShortTitle
            vc.tabBarItem.accessibilityIdentifier = "vc[\(i)]"
            return vc
        }

        let otherVC = UINavigationController(rootViewController: OtherMenuViewController.instantiate(environment: self.environment))
        otherVC.tabBarItem.image = UIImage(systemName: "ellipsis")
        otherVC.tabBarItem.title = L10n.Localizable.other
        otherVC.tabBarItem.accessibilityIdentifier = "others"
        lazyLoadVCs.append(otherVC)
        
        let longPressRecognizer = UILongPressGestureRecognizer(target: self, action: #selector(onLongPressed))
        self.tabBar.addGestureRecognizer(longPressRecognizer)
        delegate = self
        
...
