...
    
    private var cancellables = Set<AnyCancellable>()
    
    private lazy var searchResultViewController = SearchViewController.instantiate("", environment: self.environment)
    private lazy var searchController = UISearchController(searchResultsController: self.searchResultViewController)
    private let tableView = UITableView() ※ {
        $0.accessibilityIdentifier = "otherMenuTableView"
    }
    private var unreadAnnouncementsCount = 0
    private lazy var dataSource = UITableViewDiffableDataSource<Section, Item>(tableView: tableView) { [weak self] tableView, indexPath, itemIdentifier in
        guard let self else {
            return nil
        }
...
        switch itemIdentifier {
        case .switchActiveAccount:
            cell.textLabel?.text = L10n.Localizable.switchActiveAccount
            cell.detailTextLabel?.text = L10n.Localizable.currentAccount(environment.acct)
        case .myProfile:
            cell.textLabel?.text = L10n.Localizable.myProfile
            cell.accessibilityIdentifier = "openMyProfile"
        case .lists:
            cell.textLabel?.text = L10n.Localizable.lists
        case .bookmarks:
            cell.textLabel?.text = L10n.Localizable.bookmarks
        case .settings:
            cell.textLabel?.text = L10n.Localizable.settings
...
